// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reactions should add data to the tree 1`] = `
{
  "bot-output": {
    "♥️": [
      {
        "ioc": {},
        "options": {
          "channelNames": [
            "bot-output",
          ],
          "emoji": "♥️",
          "event": "REACTION_ADD",
        },
      },
    ],
  },
  "channel": {},
}
`;

exports[`Reactions should add data to the tree 2`] = `
{
  "bot-output": {
    "♥️": [
      {
        "ioc": {},
        "options": {
          "channelNames": [
            "bot-output",
          ],
          "emoji": "♥️",
          "event": "REACTION_ADD",
        },
      },
      {
        "ioc": {},
        "options": {
          "allowedRoles": [
            "Support",
          ],
          "channelNames": [
            "bot-output",
          ],
          "emoji": "♥️",
          "event": "REACTION_REMOVE",
        },
      },
    ],
  },
  "channel": {},
}
`;

exports[`Reactions should add data to the tree 3`] = `
{
  "bot-development": {
    "😘️": [
      {
        "ioc": {},
        "options": {
          "allowedRoles": [
            "Developer",
          ],
          "channelNames": [
            "bot-development",
            "bot-test-channel",
          ],
          "emoji": "😘️",
          "event": "REACTION_ADD",
        },
      },
    ],
  },
  "bot-output": {
    "♥️": [
      {
        "ioc": {},
        "options": {
          "channelNames": [
            "bot-output",
          ],
          "emoji": "♥️",
          "event": "REACTION_ADD",
        },
      },
      {
        "ioc": {},
        "options": {
          "allowedRoles": [
            "Support",
          ],
          "channelNames": [
            "bot-output",
          ],
          "emoji": "♥️",
          "event": "REACTION_REMOVE",
        },
      },
    ],
  },
  "bot-test-channel": {
    "😘️": [
      {
        "ioc": {},
        "options": {
          "allowedRoles": [
            "Developer",
          ],
          "channelNames": [
            "bot-development",
            "bot-test-channel",
          ],
          "emoji": "😘️",
          "event": "REACTION_ADD",
        },
      },
    ],
  },
  "channel": {},
}
`;

exports[`Reactions should extract reaction from direct message 1`] = `
[
  {
    "handlerKeys": [
      "9007199254740991",
      "",
    ],
    "isDirectMessage": true,
    "member": null,
  },
]
`;

exports[`Reactions should extract reaction from public channel 1`] = `
[
  {
    "handlerKeys": [
      "9007199254740991",
      "",
    ],
    "isDirectMessage": false,
    "member": {
      "avatar": null,
      "avatarURL": null,
      "communicationDisabledUntilTimestamp": null,
      "displayAvatarURL": "https://cdn.discordapp.com/avatars/9007199254740991/user%20avatar%20url.webp",
      "displayName": "nick",
      "guildId": "9007199254740991",
      "joinedTimestamp": NaN,
      "nickname": "nick",
      "pending": false,
      "premiumSinceTimestamp": null,
      "roles": {
        "cache": [],
      },
      "userId": "9007199254740991",
    },
  },
]
`;
